--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <!-- 清除默认样式 -->
     <link rel="stylesheet" href="/static/css/reset.css">
     <!-- 引入阿里云在线代码 -->
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1208127_26s6x7ql3tb.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1208127_y3n3tmxbxg.css
+    ">
     <!-- 解决手机端点击延时0.3s问题 -->
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
+    <!-- 引入百度地图 -->
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=9DPwoylF01GYYlGsG7gTnTAL1B9QYuoL 
+    "></script>
     <script>
       if ('addEventListener' in document) {
         document.addEventListener('DOMContentLoaded', function() {
